--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "web3": "^1.0.0-beta.22"
     },
     "devDependencies": {
+        "chai": "^4.1.2",
         "mocha": "^4.0.0",
         "should": "^13.1.0",
         "truffle": "^3.4.11"
