--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "multi-hash": "^0.1.1",
         "nconf": "^0.8.5",
         "truffle-contract": "^3.0.0",
-        "web3": "^0.19.1"
+        "web3": "^0.19.1",
+        "zeppelin-solidity": "^1.3.0"
     },
     "devDependencies": {
         "chai": "^4.1.2",
