-- Upgrade truffle version to 4.0.1 -- Deploy to kovan, mainnet using mnemonic -- VyralSale is Ownable

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 !.gitkeep
 .DS_Store
 .idea
-node_modules/
-bower_components/
-tmp/
-dist/
-logs/*
 .notes
 build
-build/*
+bower_components
+dist
+logs
+node_modules
 tmp
-tmp/*
