--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
         "lodash": "^4.17.4",
         "multi-hash": "^0.1.1",
         "nconf": "^0.8.5",
-        "truffle-contract": "^3.0.0",
+        "truffle-hdwallet-provider": "0.0.3",
         "web3": "^0.19.1"
     },
     "devDependencies": {
         "chai": "^4.1.2",
         "mocha": "^4.0.1",
         "should": "^13.1.3",
-        "truffle": "^3.4.11"
+        "truffle": "^4.0.1",
+        "truffle-contract": "^3.0.1"
     }
 }
