--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
         "web3": "^0.19.1"
     },
     "devDependencies": {
+        "bip39": "^2.4.0",
         "chai": "^4.1.2",
+        "ethereumjs-testrpc": "^6.0.3",
+        "ethereumjs-wallet": "^0.6.0",
         "mocha": "^4.0.1",
         "should": "^13.1.3",
         "truffle": "^4.0.1",
