--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
         "lodash": "^4.17.4",
         "multi-hash": "^0.1.1",
         "nconf": "^0.8.5",
-        "truffle-hdwallet-provider": "0.0.3",
         "web3": "^0.19.1"
     },
     "devDependencies": {
@@ -37,6 +36,8 @@
         "mocha": "^4.0.1",
         "should": "^13.1.3",
         "truffle": "^4.0.1",
-        "truffle-contract": "^3.0.1"
+        "truffle-contract": "^3.0.1",
+        "truffle-hdwallet-provider": "0.0.3",
+        "web3-provider-engine": "^13.3.3"
     }
 }
