--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "web3": "^0.19.1"
     },
     "devDependencies": {
+        "@digix/tempo": "^0.2.0",
         "bip39": "^2.4.0",
         "chai": "^4.1.2",
         "ethereumjs-testrpc": "^6.0.3",
