--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@digix/tempo": "^0.2.0",
         "bip39": "^2.4.0",
         "chai": "^4.1.2",
+        "chai-as-promised": "^7.1.1",
         "ethereumjs-testrpc": "^6.0.3",
         "ethereumjs-wallet": "^0.6.0",
         "mocha": "^4.0.1",
